--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react-hooks": "^8.0.1",
     "@types/enzyme": "^3.10.12",
     "@types/jest": "^29.2.3",
     "@types/react": "^17.0.0",
