--- a/package.json
+++ b/package.json
@@ -10,17 +10,20 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.1",
     "@types/react-redux": "^7.1.24",
+    "classnames": "^2.3.2",
     "enzyme": "^3.11.0",
     "jest": "^29.3.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
-    "react-redux": "^8.0.5"
+    "react-redux": "^8.0.5",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react-hooks": "^8.0.1",
     "@types/enzyme": "^3.10.12",
-    "@types/jest": "^29.2.3",
+    "@types/jest": "^29.2.4",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@vitejs/plugin-react": "^1.0.0",
