--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "serve": "vite preview",
-    "test": "jest"
+    "test": "jest",
+    "coverage": "jest --coverage --config jest.config.js"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.1",
